# bho

./: .gitignore  INSTALL.md  README.md  pyproject.toml
src/bho/: __init__.py  cli.py
src/bho/commands/: __init__.py  hermes.py
src/bho/core/: __init__.py
src/bho/core/docker/: __init__.py  detector.py  errors.py  models.py  setup.py
src/bho/core/hermes/: __init__.py  configuration.py  configuration_state.py  detector.py  docker_backend.py  errors.py  installer.py  models.py  profiles.py  providers.py  state.py  uninstaller.py  verification.py  version.py
tests/: test_cli.py  test_docker_detector.py  test_docker_setup.py  test_hermes_cli.py  test_hermes_configuration.py  test_hermes_configuration_state.py  test_hermes_detector.py  test_hermes_docker_backend.py  test_hermes_installer.py  test_hermes_profiles.py  test_hermes_providers.py  test_hermes_state.py  test_hermes_uninstaller.py  test_hermes_verification.py  test_hermes_version.py
