[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "bho"
version = "0.3.0"
description = "A command-line control layer for Hermes Agent and managed software projects."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Marco Buttu" }
]
dependencies = [
  "typer>=0.16,<1.0"
]

[project.scripts]
bho = "bho.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/bho"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0"
]
